more language cleanup

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5212,20 +5212,20 @@ This concludes the definition of heterogeneous logical environment and the assum
 
 
 DOL follows a model-theoretic approach on semantics: the semantics of OMS will be defined as a class of models 
-over some signature of an institution. This is called \emph{model-level}  semantics. In some cases, but not in all, we can also define
+over some signature of an institution. This is called \emph{model-level}  semantics. In some cases, but not in all,\cbs one\cbe can also define
 a \emph{theory-level} semantics of an OMS as a set of sentences over some signature of an institution. The two semantics are 
 related by the fact that, when both the model-level and the theory-level semantics of an OMS are defined, they are compatible in the 
 sense that the class of models given by the model-level semantics is exactly the model class of the theory given by the
 theory-level semantics. 
 
-We will use the following unifying notation for the two semantics of an OMS $O$:\begin{itemize}
+\cbs The following unifying notation is used\cbe for the two semantics of an OMS $O$:\begin{itemize}
  \item the institution of $O$ is denoted $\Inst(O)$,
   \item the signature of $O$ is denoted $\Sig(O)$ (which is a signature in $\Inst(O)$),
   \item the class of models of $O$ is denoted $\Mod(O)$ (which is a class of models over $\Sig(O)$),
   \item the set of axioms of $O$ is denoted $\Th(O)$ (which is a set of sentences over $\Sig(O)$).
 \end{itemize}
-\noindent Moreover, we may denote the semantics of $O$ as a tuple $sem(O) = (I, \Sigma, \cM,\Delta)$
-when $\Inst(O) = I$, $\Sig(O) = \Sigma$, $\Mod(O) = \cM$ and $\Th(O) = \Delta$.
+\noindent Moreover,\cbs the semantics of $O$ is the tuple $sem(O) = (I, \Sigma, \cM,\Delta)$
+where $\Inst(O) = I$, $\Sig(O) = \Sigma$, $\Mod(O) = \cM$ and $\Th(O) = \Delta$.\cbe
 
 The theory-level semantics of $O$ can be undefined, and then so is $\Th(O)$. When $\Th(O)$ is defined, $\Mod(O)$ can be obtained as $\Mod(O)=\{M\in\Mod(\Sig(O)) \,|\, M\models\Th(O)\}$.
 
@@ -5248,8 +5248,7 @@ both labeled with
 heterogeneous signature morphisms between the signatures of the source and target nodes.
 The theory of a node  may be undefined, as in the case of OMS, and when it is defined, 
 the class of models of that node is the class of models of $\Th(N)$. 
-For brevity, we may write the label of a node as a tuple. We make the simplifying 
-assumption that any OMS can be assigned a unique name.
+For brevity,\cbs  the label of a node may be written as a tuple. Further, it is assumed that  any OMS can be assigned a unique name.\cbe 
 
 The semantics of a network of OMS is a graph
 whose nodes are labeled like in the semantics of OMS mappings and 
@@ -5260,7 +5259,8 @@ $\sigma:\Phi(\Sig(S))\to\Sig(T)$ is a signature morphism in $\Inst(T)$),
 The intuition is that
 network provide means of putting together graphs of OMS and OMS mappings
 and of removing sub-graphs of existing networks 
-\footnote{Alternatively we could label the edges of the graph of a network with
+\footnote{Alternatively\cbs 
+ the edges of the graph of a network could be labeled with\cbe
 OMS mappings between the OMS labeling the nodes connected by the edge. This gives a more
 compact representation of the graph of the network, but it has the drawback that
 the subgraph giving the semantics of the mapping is not explicitly available and thus
@@ -5272,8 +5272,8 @@ $\Gamma$ containing:
  \begin{itemize}
     \item a graph of imports between OMS, as in the semantics of OMS mappings but
           only with import links between nodes, denoted $\Gamma.imports$
-    \item a mapping from \syntax{IRI}s to semantics of OMS, OMS mappings, and OMS networks, that 
-               we also denote by $\Gamma$, providing access to previous definitions,
+    \item a mapping from \syntax{IRI}s to semantics of OMS, OMS mappings, and OMS networks, that\cbs 
+               is also denoted by $\Gamma$, providing access to previous definitions,\cbe
     \item a prefix map, denoted $\Gamma.\prefix$, that stores the declared prefixes,
     \item a triple $\Gamma.\current$ that stores the current language, logic and serialization. 
  \end{itemize}
@@ -5293,7 +5293,7 @@ $\Gamma_1\cup\Gamma_2(\syntax{IRI}) = \begin{cases}
 $\Gamma_1\cup\Gamma_2.imports = \Gamma_1.imports \cup \Gamma_2.imports$,
 $\Gamma_1\cup\Gamma_2.\current = \Gamma_1.\current$
 and $\Gamma_1\cup\Gamma_2.\prefix = \Gamma_1.\prefix \cup \Gamma_2.\prefix$.
-We will write $\Gamma.\{\prefix = \PMap\}$ for the global environment that set the prefix map of 
+\cbs  $\Gamma.\{\prefix = \PMap\}$ represents the global environment that sets\cbe the prefix map of 
 $\Gamma$ to $\PMap$ and $\Gamma.\{\current  = (lang, logic, ser)\}$ for updating the current triple of $\Gamma$ to
 $(lang, logic, ser)$.
 
@@ -5328,16 +5328,16 @@ $(lang, logic, ser)$.
 %Semantics of an OMS declaration/relation is given by a mapping \syntax{IRI}s to semantics of OMS
 % $$\Gamma: \syntax{IRI} \rightarrow (OMS \uplus OMS \times OMS \times SigMor)$$\ednote{notation(?)}
 
-We assume a \emph{language-specific semantics} of native structured
+\cbs \DOL assumes a\cbe \emph{language-specific semantics} of native structured
 OMS, inherited from the OMS language. For a native structured OMS $O$ 
-in a language $L$, logic $L'$ and serialization $S$, we denote 
-by $sem_{(L,L',S)}(O)$ the language-specific semantics of $O$.
-We moreover assume similar language-specific semantics of a basic OMS fragment $O$ in
-the context of previous declarations, denoted 
-$sem^{(\cI,\Sigma,\cM,\Delta)}_{(L,L',S)}(O)$.
+in a language $L$, logic $L'$ and serialization $S$,\cbs 
+$sem_{(L,L',S)}(O)$ denotes the language-specific semantics of $O$.
+Further, \DOL assumes similar language-specific semantics of a basic OMS fragment $O$ in
+the context of previous declarations, which is denoted 
+$sem^{(\cI,\Sigma,\cM,\Delta)}_{(L,L',S)}(O)$.\cbe
 
 \ssclause{Semantics of Libraries}
-We define the semantics of \DOL constructs regarding libraries. 
+\cbs In this section the semantics of \DOL constructs regarding libraries is defined.\cbe 
 
 \semdom{ sem(\syntax{Library}) = \Gamma}
 
@@ -5432,7 +5432,7 @@ The semantics is defined only if $\mathit{lang}$ supports \syntax{SyntaxRef}.
 The semantics of networks of OMS is given with the help of a directed graph. Its nodes
 and edges are specified by the \syntax{NetworkElement}s, which can be OMS, OMS mappings, or OMS networks. Intuitively, the graph of a
 network consists of the union of all graphs of the network elements it
-contains, where an OMS yields a graph with one isolated node. We make the convention that
+contains, where an OMS yields a graph with one isolated node.\cbs By convention,\cbe
 all imports in the graph $\Gamma.imports$ of the current context between nodes that are
 specified in the list of \syntax{NetworkElements} are also included in the graph of 
 the network. 
@@ -5441,7 +5441,7 @@ The nodes and edges given in the \syntax{ExcludeExtensions} list are then remove
 An additional \syntax{Id} can be specified for each node, with the purpose of letting the user specify a 
 prefix in the colimit of a network for the symbols with the origin in that node that must be disambiguated.
 
-We are going to make use of the following notations. If $G$ is a graph, let $insert(G, \Gamma, \syntax{IRI}, \syntax{Id})$ be defined as follows:
+\cbs The following notations is used: if\cbe $G$ is a graph, let $insert(G, \Gamma, \syntax{IRI}, \syntax{Id})$ be defined as follows:
  \begin{itemize}
     \item if \syntax{IRI} denotes an OMS in $\Gamma$, then
                  a new node named \syntax{IRI} and labeled with $\Gamma(\syntax{IRI})$ and with \syntax{Id} is added to $G$,
@@ -5558,8 +5558,8 @@ given by $sem_{(\Gamma.lang,\Gamma.logic, \Gamma.ser)}(\syntax{BasicOMS})$.
 (\Gamma', (\cI', \Sigma', \cM',\Delta'))}
 
 
-In the rest of this section, we will use the notation 
-$Env(\Gamma, \syntax{OMS})$ for the global environment $\Gamma'$
+In the rest of this section,\cbs the notation 
+$Env(\Gamma, \syntax{OMS})$ is used for the global environment $\Gamma'$\cbe 
 such that
 $sem(\Gamma, \syntax{OMS}) = \Gamma'$.
 
